crea productos, tiendas y empleados